[package]
name = "connect_four_solver"
version = "0.1.0"
edition = "2024"
authors = ["Jacob Mish <JacobPMish@gmail.com>"]
description = "Simple GUI to solve Connect Four games"
license = "MIT"

[dependencies]
eframe = "0.32.2"
egui = "0.32.2"
serde = { version = "1.0.219", features = ["derive"] }
image = "0.25.8"
log = "0.4.28"
env_logger = "0.11.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.23"

[package.metadata.bundle]
name = "Connect Four Solver"
identifier = "io.github.Feromond.connect_four_solver"
description = "Simple GUI to solve Connect Four games"
icon = ["./icons.icns"]
